# TODO_APP_WITH_CHATBOT

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  package-lock.json  package.json.backup  pyproject.toml  run_dev.py
.claude/agents/: authentication-agent.md  backend-api-implementer.md  chief-of-staff-agent.md  cli-command-agent.md  cli-display-renderer.md  database-agent.md  documentation-generator.md  frontend-implementer.md  main-entry-orchestrator.md  model-agent.md  project-foundation.md  service-agent.md  storage-agent.md
.claude/skills/: 00-SkillsIndex.md  01-ProjectFoundationSkill.md  02-TaskModelSkill.md  03-TaskSerializationSkill.md  04-StorageExceptionsSkill.md  05-MemoryStoreCRUDSkill.md  06-ServiceExceptionsSkill.md  07-TaskServiceCoreSkill.md  08-TaskServiceStatusSkill.md  09-DisplayConsoleSkill.md  10-DisplayFunctionsSkill.md  11-CLIGroupSkill.md  12-CLIAddCommandSkill.md  13-CLIListCommandSkill.md  14-CLIUpdateCommandSkill.md  15-CLIDeleteCommandSkill.md  16-CLIStatusCommandsSkill.md  17-MainEntryPointSkill.md  18-DocumentationSkill.md
.specify/memory/: constitution.md
apps/backend/: main.py  pyproject.toml  requirements.txt
apps/backend/api/v1/endpoints/: auth.py  tasks.py
apps/backend/api/v1/schemas/: auth.py  task.py  user.py
apps/backend/core/: cors.py  errors.py  middleware.py  rate_limiter.py  security.py
apps/backend/services/: task_service.py
apps/frontend/: middleware.ts  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  (+1 more)
db/: session.py
shared/: types.ts
tests/: __init__.py
(+94 files in other folders)
