[project]
name = "chief-of-staff"
version = "0.1.0"
description = "Todo Web Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "slowapi>=0.1.8",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
chief = "chief_of_staff.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chief_of_staff"]
