[project]
name = "todo-backend"
version = "0.1.0"
description = "Backend API for Todo Web Application"
authors = [{ name = "Developer", email = "dev@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "better-auth>=0.0.1",
    "anyio>=4.0.0",
    "email-validator>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"